<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whit"
    tools:context=".View.AboutAsActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#939393"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208">

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:text="@string/developers"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:text="@string/developer_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:text="@string/shareholders"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#939393"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413">

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:text="@string/content_shareholders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:text="@string/open_source"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#939393"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"

        android:text="@string/content_open_soruce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/link1"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:paddingLeft="5dp"
        android:background="@color/whit"
        android:gravity="center|left"
        android:text="@string/link1"
        android:textAllCaps="false"
        android:textColor="@color/link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/link2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/whit"
        android:gravity="center|left"
        android:text="@string/link2"
        android:textAllCaps="false"
        android:textColor="@color/link"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/link3"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/whit"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:text="@string/link3"
        android:textAllCaps="false"
        android:textColor="@color/link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        tools:ignore="RtlHardcoded,RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>